<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".NostrosActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNosotros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:backgroundTint="#8E1F1F"
                android:hint="@string/nosotros"
                android:textAlignment="center"
                android:textColorHint="#274690"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtLuxeInn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_background2"
                android:hint="@string/LuxeInn"
                android:justificationMode="inter_word"
                android:padding="16dp"
                android:textAlignment="inherit"
                android:textColorHint="#F6F6F8"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtInfoValores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_background"
                android:hint="@string/infoValores"
                android:justificationMode="inter_word"
                android:padding="16dp"
                android:textAlignment="inherit"
                android:textColorHint="#FBF7F7"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtInfoMision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_background3"
                android:hint="@string/infoMision"
                android:justificationMode="inter_word"
                android:padding="16dp"
                android:textAlignment="inherit"
                android:textColorHint="#FBFAFA"
                android:textSize="14sp" />

            <VideoView
                android:id="@+id/videoView3"
                android:layout_width="385dp"
                android:layout_height="209dp"
                android:layout_marginTop="27dp" />
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="#274690"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>